2014-06-23  Eli Barzilay  <eli@barzilay.org>

	* calculator.el (calculator-standard-displayer): Fix bug in use of
	`calculator-groupize-number'.
	(calculator-funcall): Fix broken `cl-flet' use by moving it into the
	`eval' code, so it works in v24.3.1 too.
	(calculator-last-input): Comment to clarify purpose.

2014-06-22  Mario Lang  <mlang@delysid.org>

	* textmodes/rst.el (rst-comment-region): From from -> from.

	* net/tramp-adb.el (tramp-adb-send-command-and-check): And and -> and.

2013-06-22  Dmitry Antipov  <dmantipov@yandex.ru>

	* electric.el (electric-layout-post-self-insert-function):
	* emacs-lisp/ert.el (ert--insert-infos):
	* obsolete/vi.el (vi-set-mark):
	* term.el (term-handle-scroll):
	* textmodes/bibtex.el (bibtex-fill-field, bibtex-fill-entry):
	* wid-edit.el (widget-editable-list-value-create): Prefer
	point-marker to copy-marker of point.

2014-06-21  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	Fix completion retrieval parsing (bug#17209).
	* progmodes/python.el (python-mode):
	(python-util-strip-string): New function.
	(python-shell-completion-get-completions): Use it.

2014-06-21  Eli Zaretskii  <eliz@gnu.org>

	* skeleton.el (skeleton-insert): Fix last change.

2014-06-21  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	Enhancements for outline integration (bug#17796).
	* progmodes/python.el (python-mode): Properly set
	outline-heading-end-regexp so that comments after colons for
	defuns are supported.

2014-06-21  Eli Zaretskii  <eliz@gnu.org>

	* skeleton.el (skeleton-insert): Doc fix.

2014-06-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el (smie-config--guess): Fix typo.
	(smie-config-guess): Use smie-config-local so the rules are obeyed
	(bug#17818).

	* mouse.el (mouse-drag-line): Don't re-add to unread-comment-events,
	since it's already done inside the loop	(bug#17819).

2014-06-21  Martin Rudalics  <rudalics@gmx.at>

	* mouse.el (mouse-drag-line): Re-remove code initially removed